# minesweeper

./: Cargo.toml  LICENSE  README.md  build.rs  build_release.sh  build_wasm.sh  index.html
resources/: boews.aseprite  icons.aseprite  minesweeper.aseprite
src/: game.rs  gui.rs  gui_ideas.rs  main.rs  mainstate.rs  minesweeper.rs  rendering.rs  ui.rs
src/elements/: button.rs  menubar.rs  minesweeper_element.rs  mod.rs  text_renderer.rs
src/gui/: button.rs  dropdown.rs  menu_bar.rs  mod.rs  popup.rs  text_renderer.rs
src/old/: mainstate.rs  rendering.rs
src/old/gui/: dropdown.rs  menu_bar.rs  popup.rs  text_renderer.rs
src/ui/: elements.rs  menubar copy.rs  menubar.rs  minesweeper.rs  mod.rs  popups.rs  renderer.rs  spritesheet.rs  state.rs  text_renderer.rs  text_renderer_old.rs
src/ui/minesweeper_element/: exploder.rs  minefield.rs  mod.rs  status_bar.rs
src/ui/renderer/: mod.rs  sound.rs  style.rs  text_renderer.rs
src/ui/renderer/style/: mod.rs
