[package]
name = "minesweeper_ggez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
rand = "*"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3