[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.2.6"
macroquad = { version = "0.4.5",  features = ["audio"] }
nanoserde = "0.1.37"
webbrowser = "1.0.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
